Merged PR 1206: feat(ui:print) use print templates
Related work items: #3881, #3882, #4111, #4117